[tool.poetry]
name = "cardanopythonlib"
version = "1.0.6"
description = "Cardano Python lib to interact with the blockchain"
authors = ["Moxie <luis.restrepo@ayllu.io>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/larestrepo/CardanoPythonLib"
keywords = ["cardano", "blockchain", "python", "backend"]
include = [
"config/cardano_config.ini",
]

[tool.poetry.dependencies]
python = "^3.9"
cerberus = "^1.3.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.982"
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
